Adding ping webcomponent to fix deadman switch

--- a/src/ui-plugins/new-ui/public/new-ui.html
+++ b/src/ui-plugins/new-ui/public/new-ui.html
@@ -8,6 +8,7 @@
 <link rel="import" href="../../webcomponents/diagnostics/diagnostics.html">
 <link rel="import" href="../../webcomponents/video/video.html">
 <link rel="import" href="../../webcomponents/horizon/horizon.html">
+<link rel="import" href="../../webcomponents/ping.html">
 
 <polymer-element name="x-newui">
   <template>
@@ -29,6 +30,7 @@
         </div>
       </div>
       <div id="mainContent">
+        <bb-ping></bb-ping>
         <div id="newuiVideo" class="full-height">
           <rov-video id="videoElement"></rov-video>
           <rov-horizon id="horizon"></rov-horizon>
