Adding throttle element

--- a/src/ui-plugins/new-ui/public/new-ui.html
+++ b/src/ui-plugins/new-ui/public/new-ui.html
@@ -2,6 +2,7 @@
 <link rel="import" href="time.html" />
 <link rel="import" href="compass.html" />
 <link rel="import" href="depth.html" />
+<link rel="import" href="throttle.html" />
 <link rel="import" href="switches.html" />
 <link rel="import" href="power.html" />
 <link rel="import" href="../../webcomponents/settings/settings.html">
@@ -51,10 +52,10 @@
               <newui-depth id="newui-depth" class="center control"></newui-depth>
             </div>
           </div>
-          <div class="newui-item hidden" id="throttle-item">
+          <div class="newui-item" id="throttle-item">
             <div class="center">
               <H4>Throttle</H4>
-              <div id="newui-throttle" class="center control"></div>
+              <newui-throttle id="newui-throttle" class="center control"></newui-throttle>
             </div>
           </div>
           <div class="newui-item" id="power-item">
