Moving to lines for power level indication

--- a/src/ui-plugins/new-ui/public/throttle.html
+++ b/src/ui-plugins/new-ui/public/throttle.html
@@ -27,72 +27,194 @@
     <div id="container" class="center" style="">
 
       <div id="template" style="display:none">
-        
-        <svg
-           xmlns:dc="http://purl.org/dc/elements/1.1/"
-           xmlns:cc="http://creativecommons.org/ns#"
-           xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-           xmlns:svg="http://www.w3.org/2000/svg"
-           xmlns="http://www.w3.org/2000/svg"
-           version="1.1"
-           width="106.5676"
-           height="815.15717"
-           viewbox="0 0 106.5676 815.15717"
-           id="svg2">
-          <defs
-             id="defs4" />
-          <metadata
-             id="metadata7">
-            <rdf:RDF>
-              <cc:Work
-                 rdf:about="">
-                <dc:format>image/svg+xml</dc:format>
-                <dc:type
-                   rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-                <dc:title></dc:title>
-              </cc:Work>
-            </rdf:RDF>
-          </metadata>
+      <!--
+        viewbox="0 0 106.5676 815.15717"  
+        -->
+      
+      <svg
+         xmlns:dc="http://purl.org/dc/elements/1.1/"
+         xmlns:cc="http://creativecommons.org/ns#"
+         xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+         xmlns:svg="http://www.w3.org/2000/svg"
+         xmlns="http://www.w3.org/2000/svg"
+         version="1.1"
+         width="106.5676"
+         height="815.15717"
+         viewbox="0 0 106.5676 815.15717"
+         id="svg2">
+        <defs
+           id="defs4" />
+        <metadata
+           id="metadata7">
+          <rdf:RDF>
+            <cc:Work
+               rdf:about="">
+              <dc:format>image/svg+xml</dc:format>
+              <dc:type
+                 rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+              <dc:title></dc:title>
+            </cc:Work>
+          </rdf:RDF>
+        </metadata>
+        <g
+           id="layer1">
           <g
-             id="layer1">
-            <path
-               d="m 12.807624,5.934328 0,802.857152"
-               id="path3765"
-               style="fill:none;stroke:#ffffff;stroke-width:12.30000019;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:12.3, 36.9;stroke-dashoffset:0" />
-            <path
-               d="m 96.5219,5.934328 0,802.857152"
-               id="path3767"
-               style="fill:none;stroke:#ffffff;stroke-width:12.30000019;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:12.3, 36.9;stroke-dashoffset:0" />
-            <g
-               id="maxThrottle">
-              <rect
-                 width="10"
-                 height="131.31982"
-                 x="7.8473511"
-                 y="341.21478"
-                 id="rect3779"
-                 style="fill:#ffffff;fill-opacity:1;stroke:none" />
-              <rect
-                 width="10"
-                 height="131.31982"
-                 x="91.368195"
-                 y="341.21478"
-                 id="rect3781"
-                 style="fill:#fff9f9;fill-opacity:1;stroke:none" />
-            </g>
+             id="maxThrottle">
             <rect
-               width="30.840309"
-               height="173.74623"
-               x="38.606461"
-               y="221.30832"
-               id="throttle"
-               style="fill:#cccccc;fill-opacity:1;stroke:none" />
+               width="20.439806"
+               height="131.31982"
+               x="2.6261578"
+               y="341.21436"
+               id="rect3779"
+               style="fill:#ffffff;fill-opacity:1;stroke:none" />
+            <rect
+               width="20.440001"
+               height="131.31982"
+               x="84.551224"
+               y="341.21436"
+               id="rect3781"
+               style="fill:#fff9f9;fill-opacity:1;stroke:none" />
           </g>
-          <path
-             d="m 1.0500002,407.07541 104.9296498,0"
-             id="mid"
-             style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
-        </svg>
+          <rect
+             width="30.840309"
+             height="173.74623"
+             x="38.606461"
+             y="221.30832"
+             id="throttle"
+             style="fill:#cccccc;fill-opacity:1;stroke:none" />
+        </g>
+        <path
+           d="m 1.0500002,407.07541 104.9296498,0"
+           id="mid"
+           style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+        <g
+           id="g3046">
+          <g
+             transform="translate(0,-38.546504)"
+             id="g3018">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="mid-7"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3016"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+          </g>
+          <g
+             transform="translate(0,-115.4215)"
+             id="g3022">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3024"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3026"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+          </g>
+          <g
+             transform="translate(0,-192.2965)"
+             id="g3028">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3030"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3032"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+          </g>
+          <g
+             transform="translate(0,-269.1715)"
+             id="g3034">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3036"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3038"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+          </g>
+          <g
+             transform="translate(0,-341.1715)"
+             id="g3040">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3042"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3044"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+          </g>
+        </g>
+        <g
+           transform="matrix(-1,0,0,-1,107.60539,816.09046)"
+           id="g3063">
+          <g
+             transform="translate(0,-38.546504)"
+             id="g3065">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3067"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3069"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+          </g>
+          <g
+             transform="translate(0,-115.4215)"
+             id="g3071">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3073"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3075"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+          </g>
+          <g
+             transform="translate(0,-192.2965)"
+             id="g3077">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3079"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3081"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+          </g>
+          <g
+             transform="translate(0,-269.1715)"
+             id="g3083">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3085"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3087"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+          </g>
+          <g
+             transform="translate(0,-341.1715)"
+             id="g3089">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3091"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3093"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+          </g>
+        </g>
+      </svg>
 
 
       </div>
@@ -151,6 +273,7 @@
 
         //815 is the design height of the throttle SVG element, 200 the min height of the throttle display at power level 1      
         var height = level.map(1, 5, 200, 815);
+        console.log(height);
         var y = ((815/2) - (height/2));
         portMaxElement.animate({svgHeight: height, svgY: y}, 10);
         verticalMaxElement.animate({svgHeight: height, svgY: y}, 10);
