Fixing telemetry popup

--- a/src/ui-plugins/new-ui/public/new-ui.html
+++ b/src/ui-plugins/new-ui/public/new-ui.html
@@ -126,7 +126,7 @@
             defaults: { keyboard: 'alt+t' },
             down: function() {
               var telemetryWindow =
-                window.open('/new-ui/telemetry',
+                window.open('new-ui/telemetry',
                 '__telemetry',"menubar=no, status=no, titlebar=no, toolbar=no, width=300, height=400, location=no");
               telemetryWindow.cockpit = window.cockpit;
             }
@@ -134,7 +134,7 @@
 
         window.cockpit.rov.on('plugin.serial-monitor.toggle', function() {
           var newWindow =
-            window.open('/new-ui/serial-monitor',
+            window.open('new-ui/serial-monitor',
               '__telemetry',"menubar=no, status=no, titlebar=no, toolbar=no, width=300, height=400, location=no");
           newWindow.cockpit = window.cockpit;
         })
