--- a/src/ui-plugins/new-ui/public/new-ui.html
+++ b/src/ui-plugins/new-ui/public/new-ui.html
@@ -132,11 +132,19 @@
             }
           });
 
+        var serialMonitorWindow = undefined;
         window.cockpit.rov.on('plugin.serial-monitor.toggle', function() {
-          var newWindow =
-            window.open('new-ui/serial-monitor',
-              '__telemetry',"menubar=no, status=no, titlebar=no, toolbar=no, width=300, height=400, location=no");
-          newWindow.cockpit = window.cockpit;
+          if (serialMonitorWindow) {
+            serialMonitorWindow.close();
+            serialMonitorWindow = undefined;
+          }
+          else {
+            serialMonitorWindow =
+              window.open('new-ui/serial-monitor',
+                '__telemetry',"menubar=no, status=no, titlebar=no, toolbar=no, width=300, height=400, location=no");
+            serialMonitorWindow.cockpit = window.cockpit;
+            serialMonitorWindow.onclose = function() { window.cockpit.rov.emit('plugin.serial-monitor.toggle'); }
+          }
         })
       },
       setMenu: function(menuItem) {
