--- a/src/ui-plugins/standard/public/standard-ui.html
+++ b/src/ui-plugins/standard/public/standard-ui.html
@@ -173,7 +173,7 @@
         //We have a contract for centralizing all keyboad instructions. This code
         //wires that content to where we display it in a popover.
         $(self.$.keyboardpopover).hover(function () {
-          var kb =   window.cockpit.extensionPoints.keyboardInstructions;
+          var kb =  window.cockpit.extensionPoints.rovSettings.find('#inputcontroller-settings').find('ul');
           $(self.$.keyboardpopover).attr('data-content', kb.html());
         });
         $(self.$.keyboardpopover).popover()
