--- a/src/plugins/host-diagnostics/public/webcomponents/events-graph.html
+++ b/src/plugins/host-diagnostics/public/webcomponents/events-graph.html
@@ -1,3 +1,4 @@
+<link rel="import" href="../polymer/polymer.html">
 <dom-module name="orov-events-graph">
 <link rel="import" type="css" href="../epoch/epoch.min.css">
   <link href="../grapp-graph-epoch/grapp-graph-epoch.html" rel="import">
