--- a/src/system-plugins/software-update-alert/public/webcomponents/orov-software-version.html
+++ b/src/system-plugins/software-update-alert/public/webcomponents/orov-software-version.html
@@ -58,6 +58,7 @@
         },
         behaviors: [namespace('behaviors').oROVStandard],
         calculateUpdateAvailable: function(data){
+          if ((data===undefined) || (data===null)) return false;
           return data.length>0;
         },
         attached: function () {
