--- a/src/plugins/connection-health/public/webcomponents/orov-ping-graph.html
+++ b/src/plugins/connection-health/public/webcomponents/orov-ping-graph.html
@@ -13,7 +13,7 @@
   </style>
     <template>
     <div on-click="toggle">
-    <link href="../grapp-graph-epoch/grapp-graph-epoch.html" rel="import">
+    <!--link href="../grapp-graph-epoch/grapp-graph-epoch.html" rel="import"-->
       <grapp-graph-epoch id="timegraph" hidden="{{!enabled}}" type="time.bar" window-size="10" history-size="10" axis="" width="100" height="40">
         <grapp-graph-epoch-series label="Time Series 1"
           data='[{"time":1370044800,"y":1},{"time":1370044801,"y":10}]'>
@@ -38,6 +38,11 @@
         },
         ready: function () {
         },
+        attached: function (){
+          this.importHref(this.resolveUrl('../grapp-graph-epoch/grapp-graph-epoch.html'), function(e) {
+              console.log("Imported grapp");
+          });
+        },        
         registerEmitterHanlders: function(emitter){
           var self = this;
           emitter.on('plugin.connection-health.ping-latency',function(ms){
