--- a/src/plugins/telemetry/public/webcomponents/telemetry-graph.html
+++ b/src/plugins/telemetry/public/webcomponents/telemetry-graph.html
@@ -3,7 +3,7 @@
 <style>
 </style>
   <template>
-  <link href="../grapp-graph-epoch/grapp-graph-epoch.html" rel="import">
+  <!--link href="../grapp-graph-epoch/grapp-graph-epoch.html" rel="import"-->
     <grapp-graph-epoch id="timegraph" type="time.line" axis="left,bottom" width="400" height="150">
       <grapp-graph-epoch-series label="Time Series 1"
         data='[{"time":1370044800,"y":1},{"time":1370044801,"y":10}]'>
@@ -27,8 +27,8 @@
           }
         },
         attached: function (){
-          this.importHref('../grapp-graph-epoch/grapp-graph-epoch.html', function(e) {
-            console.log("Imported grapp");
+          this.importHref(this.resolveUrl('../grapp-graph-epoch/grapp-graph-epoch.html'), function(e) {
+              console.log("Imported grapp");
           });
         },
         eventEmitterHasChanged: function(oldvalue,newvalue){
